Snaping in solid mode (Xray 1.0) doesnt snap other geometry #128074

Closed
opened 2024-09-24 14:50:45 +02:00 by Sergey Bogatchev · 2 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 475.14

Blender Version
Broken: version: 4.2.2 LTS, branch: blender-v4.2-release, commit date: 2024-09-23 12:18, hash: c03d7d98a413
Worked: 4.1.1

Short description of error
Snaping in solid mode (Xray 1.0) doesnt snap other geometry

Exact steps for others to reproduce the error

  1. In the viewport shading panel in the top left of the viewport enable X-Ray and set it to 1.0.
  2. Add a cube to the scene.
  3. Duplicate the cube and shift it such that only part of the cubes intersect.
  4. Enabled vertex snapping.
  5. Enter edit mode on the duplicated cube and test snapping. Notice that you can't snap to vertices that are "hidden" inside the original cube.
  6. Compare against Blender 4.1 and notice you can do it. This is the bug.
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 475.14 **Blender Version** Broken: version: 4.2.2 LTS, branch: blender-v4.2-release, commit date: 2024-09-23 12:18, hash: `c03d7d98a413` Worked: 4.1.1 **Short description of error** Snaping in solid mode (Xray 1.0) doesnt snap other geometry **Exact steps for others to reproduce the error** 1. In the viewport shading panel in the top left of the viewport enable `X-Ray` and set it to 1.0. 2. Add a cube to the scene. 3. Duplicate the cube and shift it such that only part of the cubes intersect. 4. Enabled vertex snapping. 5. Enter edit mode on the duplicated cube and test snapping. Notice that you can't snap to vertices that are "hidden" inside the original cube. 6. Compare against Blender 4.1 and notice you can do it. This is the bug.
Sergey Bogatchev added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-09-24 14:50:46 +02:00
Member

I can confirm this issue is preset in 4.2.1 and 4.3.0, but wasn't present in 4.1.

I will mark as high severity as it is a regression and will look into bisecting it later today.

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-09-24 08:19, hash: 2e11331dfc8d

I can confirm this issue is preset in 4.2.1 and 4.3.0, but wasn't present in 4.1. I will mark as high severity as it is a regression and will look into bisecting it later today. **System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-09-24 08:19, hash: `2e11331dfc8d`
Member

Bisecting points to this issue being caused by 1c77779160

Bisecting points to this issue being caused by 1c77779160abe2f02481041790d06a46819887b9
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-26 03:43:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128074
No description provided.