Fix #128074: Edit Mesh being occluded for snapping even in Xray

Caused by 1c77779160

That commit removed the part that created the skip_occlusion_plane
variable for edit meshes. Therefore, restore that part of the code.